# OpenGL-Odyssey

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp
src/include/: glad.c
src/include/Camera/: Camera.cpp  Camera.h
src/include/Geometry/: Cube.const.h  Cube.cpp  Cube.h  CubeV2.cpp  CubeV2.h
src/include/Shader/: Shader.cpp  Shader.h
src/include/Texture/: Texture.h
src/include/Transform/: Transform.h
src/include/WindowManager/: WindowManager.h
src/include/glad/: glad.h
src/lessons/: template
src/lessons/01-introduction/: README.md  main.h
src/lessons/02-first-triangle/: main.h
src/lessons/03-element-buffer-object/: main.h
src/lessons/04-shader-basics/: main.h
src/lessons/05-texture-basics/: main.h
src/lessons/06-transformation-basics/: main.h
src/lessons/07-3d-plane/: main.h
src/lessons/08-3d-cube/: main.h  multi-cubes.h  multi-plane-draw-call.h  single-draw-call.h  use-abstract-cube.h
src/lessons/09-camera-look-around/: look-at-matrix.h  main.h  moving-camera.h  pitch-and-yaw.h  use-camera-class.h
src/lessons/10-lighting/: lighting-color.h  main.h  phong-lighting-model-in-view-space.h  phong-lighting-model.h
src/lessons/11-materials/: light-property.h  main.h  material-property.h  simulating-material.h
src/lessons/12-lighting-maps/: main.h
src/lessons/13-light-casters/: directional-light.h  main.h  multi-light-scene.h  point-light.h  spot-light-soft-edge.h  spot-light.h
src/libs/: Shader.cpp  WindowManager.h
src/shaders/03-element-buffer-object/: fragment.glsl
src/shaders/04-shader-basics/: fragment.glsl  vertex.glsl
(+24 files in other folders)
